tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/end-in-escape.stderr
TOML parse error at line 1, column 30
  |
1 | "backslash is the last char\
  |                              ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
